Solved an issue with the css, where the footer would overlap the content. Added doughnut charts to other content pages.

--- a/metrics/interface/src/styles/contents.css
+++ b/metrics/interface/src/styles/contents.css
@@ -66,8 +66,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding-right: 5px;
-    padding-left: 5px;
+    padding: 0px 5px 0px 5px;
+    margin: 5px 5px 5px 5px;
     border : 1px solid #c55b28;
 }
 
