--- a/metrics/interface/src/styles/footer.css
+++ b/metrics/interface/src/styles/footer.css
@@ -1,10 +1,8 @@
 #footer {
-    box-sizing: border-box;
     position: relative;
-    bottom: 0;
+    bottom: -100px;
     width: 100%;
-    height: 60px;
-    padding-bottom: 100px;
+    height: 100px;
     color: #808080;
 }
 
