--- a/metrics/interface/src/styles/navigation.css
+++ b/metrics/interface/src/styles/navigation.css
@@ -2,14 +2,11 @@
     background-image: linear-gradient(to bottom,#fff 0,#f8f8f8 100%);
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, .15), 0 1px 5px rgba(0, 0, 0, .08);
     width: 100%;
+    padding-top: 0;
     position: fixed;
-    display: flex;
-    justify-content: space-between;
-    align-items:center;
     height:60px;
     z-index: 930;
     max-height: 340px;
-    top: 0;
 }
 
 #navbar-logo {
